--- a/Tex/src/plotsStyle.tex
+++ b/Tex/src/plotsStyle.tex
@@ -52,3 +52,12 @@
 	   legend entries={\autoSkiplist,\bronson, \skiplist,
 	   \domSkiplist}, legend to name=skiplistLegened,
 }}
+
+\pgfplotsset{skiplist1000/.style={%
+	   width=\textwidth,
+       ymin=0,ymax=100000,
+       xtick={2,4,8,16,32}, 
+       legend columns=-1,
+	   legend entries={\autoSkiplist,\bronson, \skiplist,
+	   \domSkiplist}, legend to name=skiplistLegened1000,
+}}
