--- a/Tex/src/myRef.bib
+++ b/Tex/src/myRef.bib
@@ -334,7 +334,7 @@ howpublished= "\url{http://code.google.com/p/leveldb}"
  title = {The Art of Multiprocessor Programming},
  year = {2008},
  publisher = {Morgan Kaufmann Publishers Inc.},
-} 
+}
 
 @article{Eswaran:1976,
  author = {Eswaran, K. P. and Gray, J. N. and Lorie, R. A. and Traiger, I. L.},
@@ -614,4 +614,38 @@ howpublished= "\url{docs.oracle.com/javase/7/docs/api/java/util/concurrent/Concu
   author = {Ohad Shacham},
   school = {Tel Aviv University},
   year = 2012
+}
+
+@inproceedings{Herlihy:2008,
+ author = {Herlihy, Maurice and Koskinen, Eric},
+ title = {Transactional boosting: a methodology for highly-concurrent transactional objects},
+ booktitle = {PPoPP},
+ year = {2008},
+ pages = {207--216},
+}
+
+@phdthesis{NathanBronson11,
+  title = {Composable Operations on High-Performance Concurrent Collections},
+  author = {Nathan Bronson},
+  school = {Stanford University},
+  month = dec,
+  year = 2011
+}
+
+@inproceedings{Koskinen:2010,
+ author = {Koskinen, Eric and Parkinson, Matthew and Herlihy, Maurice},
+ title = {Coarse-grained transactions},
+ booktitle = {POPL},
+ year = {2010},
+ pages = {19--30},
+}
+
+@book{Grune:2000,
+ author = {Grune, Dick and Jacobs, C. and Langendoen, Koen and Bal, Henri},
+ title = {Modern Compiler Design},
+ year = {2000},
+ isbn = {0471976970},
+ edition = {1st},
+ publisher = {John Wiley \& Sons, Inc.},
+ address = {New York, NY, USA},
 }
