--- a/Tex/src/introduction.tex
+++ b/Tex/src/introduction.tex
@@ -119,7 +119,7 @@ and it is significantly out-performed by our synthesized code.
 This illustrates the benefit of the broad applicability
 of our automatic approach compared to specific custom-tailored implementations.
 
-Note that the alternative automatic approach we compare with is domination locking~\cite{Gueta2011} which scales poorly.
+Note that the alternative automatic approach we compare with is domination locking~\cite{Gueta2011}.
 %\Idit{Say something about transactional memory.}
 %The only other automatic parallelization approach we are familiar with is software transactional memory~\cite{xxx},
 %which has been shown to perform even worse than a global lock~\cite{}, hence we do not empirically
